--- a/README.textile
+++ b/README.textile
@@ -12,14 +12,15 @@ _italics_
 Here is some @code@
 
 And some more code:
-@
-public void foo()
+@public void foo()
     bar();
 }
 @
 
 h1. heading 1
+
 h2. heading 2
+
 h3. heading 3
 
 bq. This is a blockquote
