--- a/README.textile
+++ b/README.textile
@@ -7,6 +7,7 @@ It's main purpose in life is to provide your application with tools for Test Dri
 For a usage guide, please read the manual found in the _documentation/manual_ directory.
 
 _italics_
+_italics_
 
 *bold*
 
