--- a/README.textile
+++ b/README.textile
@@ -6,13 +6,9 @@ It's main purpose in life is to provide your application with tools for Test Dri
 
 For a usage guide, please read the manual found in the _documentation/manual_ directory.
 
-bc. # Output "I love Ruby"
-say = "I love Ruby"
-puts say
-
-testing
-
-p.
+bc. This is
+used for
+multi-line code
 
 _italics_
 
