--- a/documentation/manual/home.textile
+++ b/documentation/manual/home.textile
@@ -1,31 +1,14 @@
-h1. {module name}
+h1. springtester
 
-p(note). Write your module documentation in this file, possibly linking to other Textile files, and delete these notes when you are finished.
-
-p(note). Start with a clear statement of what the module is and what it is for. Link to any third-party libraries that the module is based on.
-
-p(note). Briefly describe why you might want to use this module in a Play application.
-
-h2. Sample application
-
-p(note). Your module should contain a sample app in the @sample@ directory that demonstrates the module. Describe how to run the demo here.
+The @springtester@ module is used in conjunction with the @spring@ module and provides additional classes for injecting mocks/stubs when writing tests for your Play! application.
 
 h2. Getting started
 
-p(note). Describe any installation that is required, beyond adding and resolving the module dependency.
+Include springtester in your Play! application by adding the following in your @dependencies.yml@:
 
-h2. Configuration
-
-p(note). List any configuration options that the module uses, with an @h3.@ heading for each one.
+bc. - play -> springtester [version]
 
 h2. Usage
 
-p(note). Explain how to use the module, and describe any routes, controllers, models or views that the module provides.
 
-h2. Tags
 
-p(note). List any tags the module provides, with an @h3.@ heading for each one. Include the tags’ arguments.
-
-h2. Commands
-
-p(note). List any commands the module provides, with an @h3.@ heading for each one. Include the commands’ options.
