--- a/documentation/manual/home.textile
+++ b/documentation/manual/home.textile
@@ -1,7 +1,6 @@
 h1. springtester
 
-The @springtester@ module is used in conjunction with the @spring@ module and provides additional classes for injecting mocks/stubs when writing tests for
-your Play! application.
+The @springtester@ module is used in conjunction with the @spring@ module and provides additional classes for injecting mocks/stubs when writing tests for your Play! application.
 
 h2. Getting started
 
@@ -11,8 +10,7 @@ bc. - play -> springtester [version]
 
 h2. Usage
 
-The @springtester@ module assumes you are wiring your application using the @spring@ module.  Here is an example of two classes being wired up
-using the @spring@ module.  The first is a @Person@ class that injects a @BirthCertificate@ and calls the @getAge()@ method:
+The @springtester@ module assumes you are wiring your application using the @spring@ module.  Here is an example of two classes being wired up using the @spring@ module.  The first is a @Person@ class that injects a @BirthCertificate@ and calls the @getAge()@ method:
 
 bc. @Component
 public class Person {
