--- a/documentation/manual/home.textile
+++ b/documentation/manual/home.textile
@@ -25,7 +25,7 @@ The @BirthCertificate@ returns 10:
 
 bc. @Component
 public class BirthCertificate {
-    public int open() {
+    public int getAge() {
         return 10;
     }
 }
