--- a/documentation/manual/home.textile
+++ b/documentation/manual/home.textile
@@ -10,27 +10,36 @@ bc. - play -> springtester [version]
 
 h2. Usage
 
-The @springtester@ module assumes you are wiring your application using the @spring@ module.  Here is an example of two classes being wired up using the @spring@ module.  The first is a @Person@ class that injects a @BirthCertificate@ and calls the @getAge()@ method:
+The @springtester@ module assumes you are wiring your application using the @spring@ module.  Here is an example of two classes being wired up using the @spring@ module.  The first is a @Person@ class that injects a @AgeCalculator@ and calls the @getAge()@ method:
 
 bc. @Component
 public class Person {
-    @Resource private BirthCertificate certificate;
-    public void age() {
-        int age = certificate.getAge();
-        System.out.println("The age is " + age);
+    @Resource private AgeCalculator calculator;
+    public int getAge() {
+        return calculator.calculate("1-January-1980");
     }
 }
 
-The @BirthCertificate@ returns 10:
+The @AgeCalculator@ returns 10:
 
 bc. @Component
-public class BirthCertificate {
-    public int getAge() {
-        return 10;
+public class AgeCalculator {
+    public int calculate(String date) {
+        // some code that figures out the age of the person
     }
 }
 
-Now let's say you want to write a test for @Person@ called @PersonTest@ and wish to replace the @BirthCertificate@ with a mock that returns the age
-of 20 instead of 10.
+Now let's say you want to write a test for @Person@ called @PersonTest@ and wish to replace the @AgeCalculator@ with a mock that returns the age of 20 instead of calculating the age.
+
+bc. public final class PersonTest extends SpringMockitoUnitTestCase {
+    @Subject private Person subject;
+    @Mock AgeCalculator mockAgeCalculator;
+    @Test
+    public void testGetAge() throws Exception {
+        Mockito.when(mockAgeCalculator.calculate("1-January-1980")).thenReturn(20);
+        int actual = subject.getAge();
+        assertEquals(20, actual);
+    }
+}
 
 
