--- a/documentation/manual/home.textile
+++ b/documentation/manual/home.textile
@@ -60,7 +60,7 @@ bc. public final class PersonTest extends SpringMockitoUnitTestCase {
 
 * The annotation @Subject@ will auto-magically inject the subject into the test.  In the example above, a @Person@ object will be injected into the test.  Be sure that the subject is a Spring component by annotating it with @Component.
 
-* The annotation @Mock@ is used to auto-magically create a mock of the given class.  In the example above, an @AgeCalculator@ object will be mocked and set against the field @mockAgeCalculator@.  The @Mock@ annotation can take the @name@ property which specifies the name of the field the mock will replace in the subject.  If the field name of the object to be mocked is the same as the field name in the subject, you may omit the name property like so:
+* The annotation @Mock@ (provided by @Mockito@) is used to auto-magically create a mock of the given class.  In the example above, an @AgeCalculator@ object will be mocked and set against the field @mockAgeCalculator@.  The @Mock@ annotation can take the @name@ property which specifies the name of the field the mock will replace in the subject.  If the field name of the object to be mocked is the same as the field name in the subject, you may omit the name property like so:
 
 bc. // The name of the mock "ageCalculator" has the same name as the
 // field "ageCalculator" found in the Person class and therefore
