--- a/documentation/manual/home.textile
+++ b/documentation/manual/home.textile
@@ -47,10 +47,10 @@ bc. public final class PersonTest extends SpringMockitoUnitTestCase {
     @Subject private Person subject;
     @Mock(name = "calculator") AgeCalculator mockAgeCalculator;
     @Test
-    public void testGetAge() throws Exception {
+    public void testCanVote() throws Exception {
         Mockito.when(mockAgeCalculator.calculate("1-January-1980")).thenReturn(20);
         int actual = subject.getAge();
-        assertEquals(20, actual);
+        assertEquals(true, actual);
     }
 }
 
